--- a/app/Resources/views/alle_verwijderde_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_verwijderde_artikelen_inkoper.html.twig
@@ -10,21 +10,9 @@
 <body>
 
 <div class="container">
-  <h2>Artikeloverzicht</h2>
+  <h2>Verwijderde artikelen</h2>
   <div class="pull-left" style="width: 8%">
   <h4><button class="btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('inkoperhome') }}"><font color="white"> Home</font></a><br/></h4>
-  </div>
-
-  <div class="pull-left" style="width: 23%">
-  <h4><button class="btn btn-info"><span class="glyphicon glyphicon-search"></span><a href="{{ path('inkoperzoekartikel') }}"><font color="white"> Zoek een artikel op artikelnummer</font></a></button></br></h4>
-  </div>
-
-  <div class="pull-left" style="width: 22%">
-  <h4><button class="btn btn-info"><span class="glyphicon glyphicon-search"></span><a href="{{ path('inkoperzoekomschrijving') }}"><font color="white"> Zoek een artikel op omschrijving</font></a></button></br></h4>
-  </div>
-
-  <div class="pull-left" style="width: 22%">
-  <h4><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('inkopernieuwartikel') }}"><font color="white"> Nieuw artikel</font></a></button></br></h4>
   </div>
 
   <table class="table table-striped table-hover">
