--- a/app/Resources/views/frontpage.html.twig
+++ b/app/Resources/views/frontpage.html.twig
@@ -16,21 +16,17 @@
 
   <h2 style = "text-align:center; font-size: 30px">Welkom</h2>
   <div class="row">
-    <div class="pull-left" style="width: 33%">
-      <h3>Inkoper:</h3>
-      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('inkoperhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
+    <div class="pull-left" style="width: 25%">
+      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('inkoperhome') }}"><font color="white"> Inkoper</font></a></button></br></h4>
     </div>
-    <div class="pull-left" style="width: 33%">
-      <h3>Magazijnmeester:</h3>
-      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
+    <div class="pull-left" style="width: 25%">
+      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Magazijnmeester</font></a></button></br></h4>
     </div>
-    <div class="pull-left" style="width: 33%">
-      <h3>Verkoper:</h3>
-      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('verkoperhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
+    <div class="pull-left" style="width: 25%">
+      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('verkoperhome') }}"><font color="white"> Verkoper</font></a></button></br></h4>
     </div>
-    <div class="pull-left" style="width: 33%">
-      <h3>Administrator:</h3>
-      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('administratorhome') }}"><font color="white"> Inloggen</font></a></button></br></h4>
+    <div class="pull-left" style="width: 25%">
+      <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('administratorhome') }}"><font color="white"> Administrator</font></a></button></br></h4>
     </div>
   </div>
 </div>
