--- a/app/Resources/views/alle_tebestellen_artikelen_inkoper.html.twig
+++ b/app/Resources/views/alle_tebestellen_artikelen_inkoper.html.twig
@@ -20,6 +20,7 @@
         <th>Artikelnummer</th>
         <th>Omschrijving</th>
         <th>Bestelserie</th>
+        <th>Besteld</th>
         <th>Artikel bestellen</th>
        </tr>
     </thead>
@@ -30,11 +31,19 @@
         <td>{{ artikel.artikelnummer }}</td>
         <td>{{ artikel.omschrijving }}</td>
         <td>{{ artikel.bestelserie }}</td>
+         {% for bestelregel in bestelregels %}
+          {% if(bestelregel.artikelnummer == artikel.artikelnummer) %}
+        <td>{{ bestelregel.besteld }}</td>
+          {% endif %}
+        {% endfor %}
         <td><a href="{{ path('inkoperbestelorder',{'artikelnummer':artikel.artikelnummer}) }}">Bestellen</a></td></td>
+      
       </tr>
+      
     </tbody>
     {% endif %}
-    {% endfor %}
+        {% endfor %}
+
   </table>
 </div>
 
