--- a/app/Resources/views/ontvangstmelding.html.twig
+++ b/app/Resources/views/ontvangstmelding.html.twig
@@ -15,10 +15,6 @@
   <h5><button class="btn btn btn-primary"><span class="glyphicon glyphicon-home"></span><a href="{{ path('magazijnmeesterhome') }}"><font color="white"> Home</font></a></button></h5>
   </div>
 
-  <div class="pull-left" style="width: 8%">
-  <h5><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwontvangstregel') }}"><font color="white"> Artikel toevoegen aan ontvangstmelding</font></a></button></h5>
-  </div>
-
   <table class="table table-striped table-hover">
 
     {% for goederenontvangst in goederen %}
@@ -30,6 +26,8 @@
       <tr>
         <th><h4><u><font color="blue">Ontvangstdatum:</font></u></h4></th>
         <td><h4><font color="blue">{{ goederenontvangst.ontvangstdatum|date('d-m-Y') }}</font></h4></td>
+        <td><h5><button class="btn btn-info"><span class="glyphicon glyphicon-plus"></span><a href="{{ path('magazijnmeesternieuwontvangstregel',{'goederenontvangstid':goederenontvangst.goederenontvangstid}) }}"><font color="white"> Artikel toevoegen aan ontvangstmelding</font></a></button></h5></td>
+
       </tr>
     </thead>
     <tbody>
@@ -41,6 +39,7 @@
     </tr>
     <tr>
       {% for ontvangstregel in ontvangstregels %}
+      {% if(goederenontvangst.goederenontvangstid == ontvangstregel.goederenontvangstid) %}
       <td>{{ ontvangstregel.artikelnummer }}</td>
       {% for artikel in artikelen %}
       {% if(ontvangstregel.artikelnummer == artikel.artikelnummer) %}
@@ -50,6 +49,7 @@
       <td>{{ ontvangstregel.hoeveelheid }}</td>
       <td>{{ ontvangstregel.kwaliteit }}</td>
       </tr>
+      {% endif %}
       {% endfor %}
     </tbody>
     {% endfor %}
