--- a/app/Resources/views/frontpage.html.twig
+++ b/app/Resources/views/frontpage.html.twig
@@ -14,7 +14,7 @@
 </div>
 <div class="container">
 
-  <h2 style = "text-align:center; font-size: 30px">Welkom</h2>
+  <h2 style = "text-align:center; font-size: 30px">Ga verder als:</h2>
   <div class="row">
     <div class="pull-left" style="width: 25%">
       <h4><button class="btn btn-info btn-lg"><span class="glyphicon glyphicon-log-in"></span><a href="{{ path('inkoperhome') }}"><font color="white"> Inkoper</font></a></button></br></h4>
