--- a/app/Resources/views/Registration/register.html.twig
+++ b/app/Resources/views/Registration/register.html.twig
@@ -1,18 +1,17 @@
 {# app/Resources/views/registration/register.html.twig #}
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+<div class="container" >
+    <div class="row">
+        <div class="col-md-offset-5 col-md-3">
+            <div class="form-login">
+            <h1 style="font-size: 50px; font-family: 'Garamond', cursive;"><font color="#DF0101"><B>Lunenburg</B></font></P></h1>
 <form method="post" action="">
-  <h3><div><font color="darkgrey">Nieuw Gebruiker:</font></div></h3>
-        {{ form_widget(form) }}
-        <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Wijzigen</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=10">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+
 {{ form_start(form) }}
     {{ form_row(form.username) }}
     {{ form_row(form.lastname) }}
@@ -22,7 +21,7 @@
     {{ form_row(form.roles) }}
 
 <body>
-<button type="submit" class="btn btn-info">Register!</button>
+<button type="submit" class="btn btn-info">Registreren</button>
 </body>
 </html>
 {{ form_end(form) }}
