--- a/app/Resources/views/Security/login.html.twig
+++ b/app/Resources/views/Security/login.html.twig
@@ -29,15 +29,15 @@
     #}
     </br>
 <br>
-    <button type="submit"  class="btn btn-primary btn-md">Login</button></br>
+    <button type="submit"  class="btn btn-primary btn-md">Inloggen</button></br>
 </form>
 
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
-  
+
             </div>
-        
+
         </div>
     </div>
 </div>
